--- a/myblog/blog/templates/blog/base.html
+++ b/myblog/blog/templates/blog/base.html
@@ -10,6 +10,7 @@
         <h1>Mi Blog de Viajes</h1>
         <nav>
             <a href="{% url 'home' %}">Inicio</a>
+            <a href="{% url 'about' %}">Quienes somos</a>
             <a href="{% url 'agregar_transporte' %}">Agregar Transporte</a>
             <a href="{% url 'agregar_alojamiento' %}">Agregar Alojamiento</a>
             <a href="{% url 'agregar_actividades' %}">Agregar Actividades</a>
