--- a/myblog/blog/templates/blog/editar_perfil.html
+++ b/myblog/blog/templates/blog/editar_perfil.html
@@ -1,11 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'blog/base.html' %}
 
 {% block content %}
 <h2>Editar Perfil</h2>
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Guardar Cambios</button>
+    <button type="submit">Guardar cambios</button>
 </form>
 <a href="{% url 'perfil' %}">Cancelar</a>
 {% endblock %}
