--- a/myblog/blog/templates/blog/base.html
+++ b/myblog/blog/templates/blog/base.html
@@ -15,6 +15,7 @@
             <a href="{% url 'agregar_alojamiento' %}">Agregar Alojamiento</a>
             <a href="{% url 'agregar_actividades' %}">Agregar Actividades</a>
             <a href="{% url 'buscar' %}">Buscar Actividades</a>
+            <a class="nav-link" href="{% url 'itinerarios:lista' %}">Itinerarios</a>
             {% if user.is_authenticated %}
             <a href="{% url 'perfil' %}">Perfil</a>
             <a href="{% url 'logout' %}">Cerrar Sesión</a>
