--- a/myblog/itinerarios/templates/itinerarios/base_itinerarios.html
+++ b/myblog/itinerarios/templates/itinerarios/base_itinerarios.html
@@ -1,4 +1,4 @@
-{% extends "blog/base.html" %}  <!-- Ahora apunta a blog/base.html -->
+{% extends "blog/base.html" %} 
 
 {% block content %}
 <div class="container mt-4">
