--- a/myblog/blog/templates/blog/base.html
+++ b/myblog/blog/templates/blog/base.html
@@ -17,12 +17,18 @@
             <a href="{% url 'buscar' %}">Buscar Actividades</a>
             <a class="nav-link" href="{% url 'itinerarios:lista' %}">Itinerarios</a>
             {% if user.is_authenticated %}
-            <a href="{% url 'perfil' %}">Perfil</a>
-            <a href="{% url 'logout' %}">Cerrar Sesión</a>
-        {% else %}
-            <a href="{% url 'login' %}">Iniciar Sesión</a>
-            <a href="{% url 'registro' %}">Registrarse</a>
-        {% endif %}
+             <a href="{% url 'perfil' %}">Perfil</a>
+             <form method="post" action="{% url 'logout' %}" style="display: inline;">
+                {% csrf_token %}
+                <button type="submit" style="background: none; border: none; color: blue; text-decoration: underline; cursor: pointer;">
+                    Cerrar Sesión
+                </button>
+            </form>
+{% else %}
+    <a href="{% url 'login' %}">Iniciar Sesión</a>
+    <a href="{% url 'registro' %}">Registrarse</a>
+{% endif %}
+
         </nav>
     </header>
     <main>
