--- a/myblog/blog/templates/blog/base.html
+++ b/myblog/blog/templates/blog/base.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Blog</title>
+    {% load static %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 <body>
-    <header>
-        <h1>Mi Blog de Viajes</h1>
-        <nav>
+    <header class="p-3 border-bottom">
+        <h1 class="text-center">Mi Blog de Viajes</h1>
+        <nav class="text-center">
             <a href="{% url 'home' %}">Inicio</a>
             <a href="{% url 'about' %}">Quienes somos</a>
             <a href="{% url 'agregar_transporte' %}">Agregar Transporte</a>
@@ -20,7 +23,7 @@
              <a href="{% url 'perfil' %}">Perfil</a>
              <form method="post" action="{% url 'logout' %}" style="display: inline;">
                 {% csrf_token %}
-                <button type="submit" style="background: none; border: none; color: blue; text-decoration: underline; cursor: pointer;">
+                <button type="submit" class="btn btn-link p-0 align-baseline">Cerrar Sesión</button>
                     Cerrar Sesión
                 </button>
             </form>
@@ -31,8 +34,9 @@
 
         </nav>
     </header>
-    <main>
+    <main class="container">
         {% block content %}{% endblock %}
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
