--- a/myblog/blog/templates/blog/detalle_perfil.html
+++ b/myblog/blog/templates/blog/detalle_perfil.html
@@ -1,27 +1,29 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Mi Perfil</title>
-    {% load static %}
-</head>
-<body>
-    <h1>Perfil de {{ perfil.user.username }}</h1>
+{% extends 'blog/base.html' %}
+{% load static %}
 
-    <p><strong>Nombre:</strong> {{ perfil.nombre }}</p>
-    <p><strong>Apellido:</strong> {{ perfil.apellido }}</p>
-    <p><strong>Bio:</strong> {{ perfil.bio }}</p>
+{% block content %}
+<div class="container py-5" style="background-color: #FEF6E7;">
+    <h1 class="text-center mb-4" style="color: #2FCFC0;">Perfil de {{ perfil.user.username }}</h1>
 
-    {% if perfil.imagen %}
-        <img src="{{ perfil.imagen.url }}" alt="Foto de perfil" style="max-width:200px;">
-    {% else %}
-        <p>No hay imagen de perfil.</p>
-    {% endif %}
+    <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
+            {% if perfil.imagen %}
+                <img src="{{ perfil.imagen.url }}" alt="Foto de perfil" class="img-thumbnail mb-3" style="max-width: 200px;">
+            {% else %}
+                <p style="color: #622BD9;">No hay imagen de perfil.</p>
+            {% endif %}
+        </div>
+    </div>
 
-    <br><br>
-    <a href="{% url 'editar_perfil' %}">Editar Perfil</a>
-    <br><br>
-    <a href="{% url 'home' %}">
-        <button>Volver</button>
-    </a>
-</body>
-</html>
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <p style="color: #622BD9;"><strong>Nombre:</strong> {{ perfil.nombre }}</p>
+            <p style="color: #622BD9;"><strong>Apellido:</strong> {{ perfil.apellido }}</p>
+            <p style="color: #622BD9;"><strong>Bio:</strong> {{ perfil.bio }}</p>
+
+            <a href="{% url 'editar_perfil' %}" class="btn btn-outline-primary me-2">Editar Perfil</a>
+            <a href="{% url 'home' %}" class="btn btn-outline-secondary">Volver</a>
+        </div>
+    </div>
+</div>
+{% endblock %}
