--- a/myblog/blog/templates/blog/base.html
+++ b/myblog/blog/templates/blog/base.html
@@ -23,9 +23,7 @@
              <a href="{% url 'perfil' %}">Perfil</a>
              <form method="post" action="{% url 'logout' %}" style="display: inline;">
                 {% csrf_token %}
-                <button type="submit" class="btn btn-link p-0 align-baseline">Cerrar Sesión</button>
-                    Cerrar Sesión
-                </button>
+                <button type="submit" class="btn btn-link p-0" style="text-decoration: underline; background: none; border: none; color: #622BD9;">Cerrar Sesión</button>
             </form>
 {% else %}
     <a href="{% url 'login' %}">Iniciar Sesión</a>
