--- a/myblog/blog/templates/blog/home.html
+++ b/myblog/blog/templates/blog/home.html
@@ -7,7 +7,7 @@
         <div class="col-md-6 text-center text-md-start">
             <h1 class="mb-4" style="color: #2FCFC0;">Bienvenidos a TRAVELIANDO</h1>
             <p class="lead" style="color: #622BD9;">
-                Un blog para armar tu viaje perfecto. Explorá nuestras opciones de transporte, alojamiento y actividades.
+                Un blog para armar tu viaje perfecto. Explorá nuestra web, podras agregar actividades, armar tu itinerario ideal y nosotros te enviaremos las propuestas que se adapten a tus gustos e intereses.
             </p>
         </div>
         <div class="col-md-6 text-center">
